# EGISES-EMNLP23

./: README.md  requirements.txt  setup.py
docs/: explaination.md  sample_consolidated.jsonl
egises/: __init__.py  distance_measure.py  models.py  pyproject.toml  utils.py
