[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egises"
version = "0.0.1"
authors = [
  { name="KDM Lab", email="ankush.watchtower@gmail.com" },
]
description = "Egises is the novel measure to evaluate the degree of personalization of any summarization model."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
"Homepage" = "https://github.com/KDM-LAB/egises"
"Bug Tracker" = "https://github.com/KDM-LAB/egises/issues"